---
source: tests/files.rs
expression: visualization.result
---
@inc(v0: int): int {
  v1_: int = const 2;
  v2_: bool = lt v0 v1_;
  br v2_ .v3_ .v4_;
.v3_:
  v5_: int = const 1;
  v6_: int = add v5_ v0;
  print v6_;
  v7_: int = call @inc v6_;
  v8_: int = id v7_;
  jmp .v9_;
.v4_:
  v8_: int = id v0;
.v9_:
  ret v8_;
}
@main {
  v0_: int = const 0;
  v1_: int = call @inc v0_;
  print v1_;
}
